tests/machine/x/c/inner_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/inner_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/inner_join.c:83:44: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   83 |           .orderId = o.id, .customerName = c.name, .total = o.total};
      |                                            ^
/workspace/mochi/tests/machine/x/c/inner_join.c:83:44: note: (near initialization for ‘(anonymous).customerName’)
/workspace/mochi/tests/machine/x/c/inner_join.c:82:23: error: incompatible types when assigning to type ‘int’ from type ‘resultItem’
   82 |       _t3.data[_t4] = (resultItem){
      |                       ^
/workspace/mochi/tests/machine/x/c/inner_join.c:88:28: error: invalid initializer
   88 |   list_resultItem result = _t3;
      |                            ^~~

   1: #include <stdio.h>
